Fix: Fix grouped / sub topic body alignment, progress bar width (fixes #14)

--- a/less/toc.less
+++ b/less/toc.less
@@ -12,8 +12,9 @@
 // --------------------------------------------------
 .toc__group-item .toc__group {
   .toc__group-item-title,
-  .toc__item-title-inner {
-    text-indent: 1rem;
+  .toc__item-title-inner,
+  .toc__item-body-inner {
+    padding-inline-start: 1rem;
   }
 }
 
@@ -93,6 +94,14 @@
 // THEME
 // --------------------------------------------------
 
+.drawer .toc {
+  &__item-title,
+  &__item-subtitle,
+  &__item-body {
+    width: 100%;
+  }
+}
+
 .toc {
   &__item-content {
     display: flex;
@@ -114,6 +123,7 @@
 // --------------------------------------------------
 .toc {
   &__indicator {
+    min-width: 2rem;
     border-color: @progress-border;
   }
 
